--- a/src/ikl.web/Client/wwwroot/index.html
+++ b/src/ikl.web/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,10 +10,12 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link href="ikl.web.Client.styles.css" rel="stylesheet" />
+    <script src="_content/BlazorStrap/blazorStrap.js"></script>
 </head>
 
 <body>
-    <app>Loading...</app>
+<div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
