--- a/src/ikl.web/Client/wwwroot/index.html
+++ b/src/ikl.web/Client/wwwroot/index.html
@@ -4,16 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>ikl.web</title>
+    <title>Ib Kofod Larsen</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link href="ikl.web.Client.styles.css" rel="stylesheet" />
+    <style>
+        html, body, #app {
+            height: 100%;
+        }
+    </style>
 </head>
 
-<body>
+<body style="overflow: hidden;">
 <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
